# Christmas-Decorator

./: .gitignore  README.md
backend/: download_models.py  main.py  pyproject.toml  requirements.txt  start_model.sh  start_models.sh
backend/app/: config.py
backend/app/routers/: decorator.py
backend/app/schemas/: schemas.py
backend/app/services/: agents.py  images.py  llm.py
frontend/src/: App.jsx  index.css
